# yolov4_to_onnx

./: README.md  pyproject.toml
tests/: test_yolov4_to_onnx.py
yolov4_to_onnx/: data_processing.py  yolov4_to_onnx.py
