[tool.poetry]
name = "yolov4_to_onnx"
version = "0.1.0"
description = ""
authors = ["wep21 <border_goldenmarket@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
onnx = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
